# dart

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
include/: config.hpp  constraints.hpp  database.hpp  defs.hpp  file.hpp  file_utils.hpp  paging.hpp  query_builder.hpp  table.hpp
src/: file.cpp  main.cpp
tests/: database_test.cpp  file_test.cpp  file_utils_test.cpp  paging_test.cpp  table_test.cpp
